# therror

./: CHANGELOG.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
core/: Cargo.toml
core/src/: lib.rs
impl/: CHANGELOG.md  Cargo.toml
impl/src/: expand.rs  lib.rs
src/: display.rs  lib.rs  provide.rs
tests/: test_backtrace.rs  test_deprecated.rs  test_display.rs  test_error.rs  test_expr.rs  test_from.rs  test_generics.rs  test_lints.rs  test_option.rs  test_path.rs  test_source.rs  test_transparent.rs
tests/ui/: bad-field-attr.rs  concat-display.rs  duplicate-enum-source.rs  duplicate-fmt.rs  duplicate-struct-source.rs  duplicate-transparent.rs  from-backtrace-backtrace.rs  from-not-source.rs  lifetime.rs  missing-fmt.rs  no-display.rs  source-enum-not-error.rs  source-enum-unnamed-field-not-error.rs  source-struct-not-error.rs  source-struct-unnamed-field-not-error.rs  transparent-display.rs  transparent-enum-many.rs  transparent-enum-not-error.rs  transparent-enum-source.rs  transparent-enum-unnamed-field-not-error.rs  transparent-struct-many.rs  transparent-struct-not-error.rs  transparent-struct-source.rs  transparent-struct-unnamed-field-not-error.rs  unexpected-field-fmt.rs  unexpected-struct-source.rs  union.rs
