[package]
name = "therror"
version = "0.0.50"
authors = ["David Tolnay <dtolnay@gmail.com>"]
categories = ["rust-patterns"]
description = "derive(Error) with a twist (based on therror)"
documentation = "https://docs.rs/therror"
edition = "2021"
keywords = ["error", "error-handling", "derive"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Byron/therror"
rust-version = "1.56"

[dependencies]
# NOTE: Requirement should be `=…`, not `^…`, but `cargo smart-release` can't handle that yet.
therror-impl = { version = "^0.0.50", path = "impl" }
therror-core = { version = "^0.0.1", path = "core" }

[dev-dependencies]
anyhow = "1.0.73"
ref-cast = "1.0.18"
rustversion = "1.0.13"
trybuild = { version = "1.0.81", features = ["diff"] }

[workspace]
members = ["impl", "core"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]
