[package]
name = "therror-core"
version = "0.0.1"
authors = ["David Tolnay <dtolnay@gmail.com>"]
description = "Core types of the `therror` crate (based on therror)"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Byron/therror"
rust-version = "1.56"

[dependencies]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]
